--- a/package.json
+++ b/package.json
@@ -16,7 +16,9 @@
     "@mui/icons-material": "^5.8.4",
     "@mui/material": "^5.8.7",
     "@nivo/core": "^0.79.0",
+    "@nivo/generators": "^0.79.0",
     "@nivo/line": "^0.79.1",
+    "@nivo/radar": "^0.79.1",
     "lodash": "^4.17.21",
     "next": "12.2.2",
     "react": "18.2.0",
