--- a/package.json
+++ b/package.json
@@ -15,10 +15,12 @@
     "@emotion/styled": "^11.9.3",
     "@mui/icons-material": "^5.8.4",
     "@mui/material": "^5.8.7",
+    "@nivo/bar": "^0.79.1",
     "@nivo/core": "^0.79.0",
     "@nivo/generators": "^0.79.0",
     "@nivo/line": "^0.79.1",
     "@nivo/radar": "^0.79.1",
+    "@nivo/radial-bar": "^0.79.1",
     "lodash": "^4.17.21",
     "next": "12.2.2",
     "react": "18.2.0",
