--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "@nivo/line": "^0.79.1",
     "@nivo/radar": "^0.79.1",
     "@nivo/radial-bar": "^0.79.1",
+    "@nivo/treemap": "^0.79.1",
     "lodash": "^4.17.21",
     "next": "12.2.2",
     "react": "18.2.0",
