--- a/package.json
+++ b/package.json
@@ -25,7 +25,8 @@
     "lodash": "^4.17.21",
     "next": "12.2.2",
     "react": "18.2.0",
-    "react-dom": "18.2.0"
+    "react-dom": "18.2.0",
+    "react-query": "^3.39.1"
   },
   "devDependencies": {
     "@babel/core": "^7.18.6",
