--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "@nivo/core": "^0.79.0",
     "@nivo/generators": "^0.79.0",
     "@nivo/line": "^0.79.1",
+    "@nivo/pie": "^0.79.1",
     "@nivo/radar": "^0.79.1",
     "@nivo/radial-bar": "^0.79.1",
     "@nivo/treemap": "^0.79.1",
