--- a/package.json
+++ b/package.json
@@ -23,11 +23,11 @@
     "@nivo/radar": "^0.79.1",
     "@nivo/radial-bar": "^0.79.1",
     "@nivo/treemap": "^0.79.1",
+    "@tanstack/react-query": "^4.0.10",
     "lodash": "^4.17.21",
     "next": "12.2.2",
     "react": "18.2.0",
-    "react-dom": "18.2.0",
-    "react-query": "^3.39.1"
+    "react-dom": "18.2.0"
   },
   "devDependencies": {
     "@babel/core": "^7.18.6",
