--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "build-storybook": "build-storybook"
   },
   "dependencies": {
+    "@apollo/client": "^3.6.9",
     "@emotion/react": "^11.9.3",
     "@emotion/styled": "^11.9.3",
     "@mui/icons-material": "^5.8.4",
@@ -24,6 +25,7 @@
     "@nivo/radial-bar": "^0.79.1",
     "@nivo/treemap": "^0.79.1",
     "@tanstack/react-query": "^4.0.10",
+    "graphql": "^16.5.0",
     "lodash": "^4.17.21",
     "next": "12.2.2",
     "react": "18.2.0",
