--- a/package.json
+++ b/package.json
@@ -24,7 +24,6 @@
     "@nivo/radar": "^0.79.1",
     "@nivo/radial-bar": "^0.79.1",
     "@nivo/treemap": "^0.79.1",
-    "@tanstack/react-query": "^4.0.10",
     "graphql": "^16.5.0",
     "lodash": "^4.17.21",
     "next": "12.2.2",
@@ -33,7 +32,9 @@
   },
   "devDependencies": {
     "@babel/core": "^7.18.6",
+    "@storybook/addon-a11y": "^6.5.9",
     "@storybook/addon-actions": "^6.5.9",
+    "@storybook/addon-controls": "^6.5.9",
     "@storybook/addon-essentials": "^6.5.9",
     "@storybook/addon-interactions": "^6.5.9",
     "@storybook/addon-links": "^6.5.9",
@@ -45,8 +46,11 @@
     "@types/react": "18.0.15",
     "@types/react-dom": "18.0.6",
     "babel-loader": "^8.2.5",
+    "chromatic": "^6.7.1",
     "eslint": "8.19.0",
     "eslint-config-next": "12.2.2",
     "typescript": "4.7.4"
-  }
+  },
+  "readme": "ERROR: No README data found!",
+  "_id": "simplywallst-clone@0.1.0"
 }
