--- a/package.json
+++ b/package.json
@@ -8,7 +8,10 @@
     "start": "next start",
     "lint": "next lint",
     "storybook": "start-storybook -p 6006",
-    "build-storybook": "build-storybook"
+    "build-storybook": "build-storybook",
+    "test": "jest --watch",
+    "test:cover": "jest --coverage",
+    "test:ci": "jest --ci"
   },
   "dependencies": {
     "@apollo/client": "^3.6.9",
@@ -42,6 +45,8 @@
     "@storybook/manager-webpack5": "^6.5.9",
     "@storybook/react": "^6.5.9",
     "@storybook/testing-library": "^0.0.13",
+    "@testing-library/jest-dom": "^5.16.4",
+    "@testing-library/react": "^13.3.0",
     "@types/node": "18.0.3",
     "@types/react": "18.0.15",
     "@types/react-dom": "18.0.6",
@@ -49,6 +54,9 @@
     "chromatic": "^6.7.1",
     "eslint": "8.19.0",
     "eslint-config-next": "12.2.2",
+    "jest": "^28.1.3",
+    "jest-environment-jsdom": "^28.1.3",
+    "resize-observer-polyfill": "^1.5.1",
     "typescript": "4.7.4"
   },
   "readme": "ERROR: No README data found!",
