--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -1,11 +1,9 @@
-sonar.projectKey=jonattfin_simplywallst-clone
-sonar.organization=jonattfin-github
-
-sonar.javascript.lcov.reportPaths=./coverage/lcov.info
 
 # This is the name and version displayed in the SonarCloud UI.
-#sonar.projectName=simplywallst-clone
-#sonar.projectVersion=1.0
+sonar.projectName=simplywallst-clone
+sonar.projectVersion=1.0
+
+sonar.javascript.lcov.reportPaths=./coverage/lcov.info
 
 # Path is relative to the sonar-project.properties file. Replace "\" by "/" on Windows.
 #sonar.sources=.
