--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -1,3 +1,5 @@
+sonar.projectKey=jonattfin_simplywallst-clone
+sonar.organization=jonattfin-github
 
 # This is the name and version displayed in the SonarCloud UI.
 sonar.projectName=simplywallst-clone
