--- a/package.json
+++ b/package.json
@@ -38,15 +38,15 @@
   "devDependencies": {
     "@babel/core": "^7.18.6",
     "@faker-js/faker": "^7.3.0",
-    "@storybook/addon-a11y": "^6.5.9",
-    "@storybook/addon-actions": "^6.5.9",
-    "@storybook/addon-controls": "^6.5.9",
-    "@storybook/addon-essentials": "^6.5.9",
-    "@storybook/addon-interactions": "^6.5.9",
-    "@storybook/addon-links": "^6.5.9",
-    "@storybook/builder-webpack5": "^6.5.9",
-    "@storybook/manager-webpack5": "^6.5.9",
-    "@storybook/react": "^6.5.9",
+    "@storybook/addon-a11y": "^6.5.10",
+    "@storybook/addon-actions": "^6.5.10",
+    "@storybook/addon-controls": "^6.5.10",
+    "@storybook/addon-essentials": "^6.5.10",
+    "@storybook/addon-interactions": "^6.5.10",
+    "@storybook/addon-links": "^6.5.10",
+    "@storybook/builder-webpack5": "^6.5.10",
+    "@storybook/manager-webpack5": "^6.5.10",
+    "@storybook/react": "^6.5.10",
     "@storybook/testing-library": "^0.0.13",
     "@storybook/testing-react": "^1.3.0",
     "@testing-library/jest-dom": "^5.16.4",
@@ -58,6 +58,7 @@
     "chromatic": "^6.7.1",
     "eslint": "8.19.0",
     "eslint-config-next": "12.2.2",
+    "eslint-plugin-storybook": "^0.6.3",
     "jest": "^28.1.3",
     "jest-environment-jsdom": "^28.1.3",
     "resize-observer-polyfill": "^1.5.1",
